--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -36,13 +36,13 @@ links:
 <ul>
   <li><p align="justify">Download an <a href="https://github.com/arcan1s/oblikuestrategies/releases">archive</a> with latest version of source files.</p></li>
   <li><p align="justify">Extract it and install the application. For global isntallation type:</p>
-<pre>cd /where/your/applet/is/installed
+<pre>cd /where/is/applet/
 mkdir build && cd build
 cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` -DCMAKE_BUILD_TYPE=Release ../
 make
 sudo make install</pre>
 <p align="justify">For local isntallation type:</p>
-<pre>cd /where/your/applet/is/installed
+<pre>cd /where/is/applet/
 mkdir build && cd build
 cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --localprefix` -DCMAKE_BUILD_TYPE=Release ../
 make
@@ -64,7 +64,7 @@ make install</pre></li>
 
 <!-- howto block -->
 <h2><a name="howto" class="anchor" href="#howto"><span class="octicon octicon-link"></span></a>How to use</h2>
-<p align="justify">Open your Plasma widgetes and select <code>Oblikue strategies</code>.</p>
+<p align="justify">Open your Plasma widgets and select <code>Oblikue strategies</code>.</p>
 <!-- end of howto block -->
 
 <!-- config block -->
