--- a/ru/index.html
+++ b/ru/index.html
@@ -11,8 +11,8 @@ title: arcanis
       <header>
         <h1>{{ page.title }}</h1>
 
-        <p class="view"><a href="/ru/blog/">Мой блог</a><br>
-                        <a href="/ru/projects/">Мои проекты</a></p>
+        <p class="view"><a href="/ru/blog/">Блог</a><br>
+                        <a href="/ru/projects/">Проекты</a></p>
         <p class="view"><a href="/ru/about">Обо мне</a></p>
 
       </header>
