--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -1,97 +1,97 @@
 ---
 category: ru
 layout: default
-title: arcanis' projects
+title: Проекты
 comment: false
 share: true
 back: 1
 groups:
-    - title: Linux daemons
-      short: daemons
-      projects:
-          - title: git-etc
-            short: git-etc
-            description: <code>git-etc</code> is a simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval. It is written on <code>Bash</code>. It is also has a simple Graphical user interface written on <code>Python2</code> (<code>pyqt4</code>) for work with the created repository.
-            links:
-                - <a href="/projects/git-etc">Homepage</a>
-                - <a href="https://github.com/arcan1s/git-etc">GitHub repo</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a>
-          - title: queued
-            short: queued
-            description: <code>queued</code> is daemon for starting jobs to queue of calculations. It was written on <code>Bash</code> created as proof-of-concept.
-            links:
-                - <a href="/projects/queued">Homepage</a>
-                - <a href="https://github.com/arcan1s/queued">GitHub repo</a>
-    - title: KDE widgets
+    - title: Виджеты KDE
       short: widgets
       projects:
           - title: DeadLine widget
             short: deadline
-            description: <code>DeadLine widget</code> is a Plasmoid script written on <code>Python2</code>. It is able to create jobs, and add reminders to them. Now this project has a pre-alpha stage. Someday maybe I will complete it.
+            description: <code>DeadLine widget</code> плазмоид, написанный на <code>Python2</code>. Может создавать задачи и добавлять напоминания к ним. Сейчас этот проект находится в состоянии пре-альфа. Может быть когда-нибудь я доделаю его.
             links:
-                - <a href="https://github.com/arcan1s/deadlinewidget">GitHub repo</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/deadlinewidget">GitHub</a>
           - title: Oblikue strategies
             short: oblikuestrategies
-            description: <code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">GNOME applet</a> fork with some of special features.
+            description: <code>oblikue-strategies</code> плазмоид, написанный на <code>CPP</code>, который показывает случайные карты из Brian Eno и Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. Это форк <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">апплета для GNOME</a> с некоторыми дополнительными фичами.
             links:
-                - <a href="/projects/oblikuestrategies">Homepage</a>
-                - <a href="https://github.com/arcan1s/oblikuestrategies">GitHub repo</a>
-                - Page on <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">kde-look.org</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">AUR package</a>
+                - <a href="/ru/projects/oblikuestrategies">Домашняя страница</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/oblikuestrategies">GitHub</a>
+                - Страница на <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">kde-look.org</a>
+                - Пакет в <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">AUR</a>
           - title: Open on desktop
             short: openondesktop
-            description: <code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
+            description: <code>Open on desktop</code> выпадающее меню для <a href="http://dolphin.kde.org">Dolhpin</a>. Создает группу в контексстном меню, которое позволяет открыть файл на указанном рабочем столе. Имеет установочный скрипт, который написан на <code>Bash</code>.
             links:
-                - <a href="https://github.com/arcan1s/openondesktop">GitHub repo</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/openondesktop">GitHub</a>
           - title: py-text-monitor
             short: pytextmonitor
-            description: <code>py-text-monitor</code> is a minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
+            description: <code>py-text-monitor</code> минималистичный плазмоид, написанный на <code>Python2</code>. Он выглядит, как виджеты в <a href="http://awesome.naquadah.org/">Awesome WM</a>. Мой плазмоид хорошо и легко настраивается и не засоряет Ваш KDE. Также этот пакет имеет дополнительный <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).
             links:
-                - <a href="/projects/pytextmonitor">Homepage</a>
-                - <a href="https://github.com/arcan1s/pytextmonitor">GitHub repo</a>
-                - Plasmoid page on <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a>
-                - DataEngine page on <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">kde-look.org</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">AUR package</a>
+                - <a href="/ru/projects/pytextmonitor">Домашняя страница</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/pytextmonitor">GitHub</a>
+                - Страница плазмоида на <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a>
+                - Страница DataEngine на <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">kde-look.org</a>
+                - Пакет в <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">AUR</a>
           - title: Kit system monitor
             short: sysmon
-            description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
+            description: <code>Kit System Monitor</code> системный и хардварный монитор, основанный на EG Sysmon. Написан на языке, похожем на HTML, для <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> и имеет постой установочный скрипт, написанный на <code>Python2</code>. Это мой первый Open Source проект.
             links:
-                - <a href="https://github.com/arcan1s/sysmon">GitHub repo</a>
-                - Page on <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">kde-look.org</a>
-    - title: Scientific programs
+                - Репозиторий на <a href="https://github.com/arcan1s/sysmon">GitHub</a>
+                - Страница на <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">kde-look.org</a>
+    - title: Демоны
+      short: daemons
+      projects:
+          - title: git-etc
+            short: git-etc
+            description: <code>git-etc</code> простой демон, который создает git репозиторий в указанной директории и создает коммит в указанный промежуток времени. Он написан на <code>Bash</code>. Также имеет простой графический интерфейс, написанный на <code>Python2</code> (<code>pyqt4</code>) для работы с созданным репозиторием.
+            links:
+                - <a href="/ru/projects/git-etc">Домашняя страница</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/git-etc">GitHub</a>
+                - Пакет в <a href="https://aur.archlinux.org/packages/git-etc">AUR</a>
+          - title: queued
+            short: queued
+            description: <code>queued</code> демон для старта задач в очередь вычислений. Написан на <code>Bash</code>, создан как proof-of-concept.
+            links:
+                - <a href="/ru/projects/queued">Домашняя страница</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/queued">GitHub</a>
+    - title: Научные программы
       short: science
       projects:
-          - title: Molecular dynamic
+          - title: Молекулярная динамика
             short: moldyn
-            description: They are represented by a single repository. It contains some programs for analysis of molecular dynamic trajectories using statistical mechanics and some of maths methods (e.g. graph theory). Usualy backend programs are written on <code>C</code>, but sometimes on <code>Python2</code>. Some of these have a Graphical user interface written on <code>CPP</code>.
+            description: Они представлены единственный репозиторием. Содержит некоторые программы для анализа молекулярно-динамических траекторий, используя методы статистической механики и некоторые математические (например, теория графов). Обычно, бекенд программы написаны на <code>C</code>, хотя иногда и на <code>Python2</code>. Некоторые из них имеют графический интерфейс, написанный на <code>CPP</code>.
             links:
-                - <a href="/projects/moldyn">Homepage</a>
-                - <a href="https://github.com/arcan1s/moldyn">GitHub repo</a>
-    - title: Utilities
+                - <a href="/ru/projects/moldyn">Домашняя страница</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/moldyn">GitHub</a>
+    - title: Утилиты
       short: utilities
       projects:
           - title: extract_pkglist
             short: extpkg
-            description: <code>extract_pkglist</code> a simple script written on <code>Python2</code> for creating list of installed packages in ArchLinux.
+            description: <code>extract_pkglist</code> простой скрипт, написанный на <code>Python2</code> для создания списка установленных пакетов в ArchLinux.
             links:
-                - <a href="https://github.com/arcan1s/extract_pkglist">GitHub repo</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/extract_pkglist">GitHub</a>
           - title: Food GUI
             short: foodgui
-            description: <code>Food GUI</code> is a simple program-calculator that uses own database and written on <code>Python2</code>. It calculates proteins, fats, carbohydrates, food energy and glycemic index of eaten food. It is my first project with GUI and was made just-for-fun (and for my ex-girlfriend). It also has a binary version for Win64.
+            description: <code>Food GUI</code> простая программа-калькулятор, использующая собственную базу данных. Написана на <code>Python2</code>. Рассчитывает белки, жиры и углеводы, а также калорийность и гликемический индекс съеденной пищи. Это мой первый проект с графическим интерфейсом и был написан just-for-fun (и для моей бывшей девушки). Также имеет бинарную версию под Win64.
             links:
-                - <a href="https://github.com/arcan1s/food_gui">GitHub repo</a>
-                - Archlinux <a href="https://aur.archlinux.org/packages/food_gui">AUR package</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/food_gui">GitHub</a>
+                - Пакет в <a href="https://aur.archlinux.org/packages/food_gui">AUR</a>
           - title: julius-actions
             short: julius-actions
-            description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
+            description: <code>julius-actions</code> Скрипт, написанный на <code>Python2</code> для работы с <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. Был сделан just-for-fun в мое свободное время. Работает нормально, но я им не пользуюсь.
             links:
-                - <a href="https://github.com/arcan1s/julius-actions">GitHub repo</a>
+                - Репозиторий на <a href="https://github.com/arcan1s/julius-actions">GitHub</a>
 ---
   <body>
     <div class="wrapper">
       <header>
         <h1>{{ page.title }}</h1>
-        <p class="view">The list of some of my projects</p>
+        <p class="view">Список некоторых из моих проектов</p>
         <p class="view">
           {% for group in page.groups %}
             <a href="#{{ group.short }}">{{ group.title }}</a><br>
